--- a/ex-bb-kline/src/main/resources/application-pcdev.properties
+++ b/ex-bb-kline/src/main/resources/application-pcdev.properties
@@ -1,4 +1,4 @@
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
@@ -25,26 +25,26 @@ bb.kline.bbRepairTrade.enable=1
 
 
 # pubsub ongoing trade
-bb.trade.pattern=bb:trade:%{asset}:%{symbol}
+bb.trade.pattern=pc:trade:%{asset}:%{symbol}
 
 #bb.kline.trigger.pattern=bb:kline:trigger:%{asset}:%{symbol}:%{freq}
-bb.kline.updateEventPattern=bb:kline:updateEvent:%{asset}:%{symbol}:%{freq}
+bb.kline.updateEventPattern=pc:kline:updateEvent:%{asset}:%{symbol}:%{freq}
 # bb kline data pattern
 #bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
-bb.kline=candle:bb:%{asset}:%{symbol}:%{freq}
+bb.kline=candle:pc:%{asset}:%{symbol}:%{freq}
 
 # third data
-kline.bb.thirdDataPattern=kline:bb:thirdData:%{asset}:%{symbol}:%{freq}
-kline.bb.thirdDataUpdateEventPattern=kline:bb:thirdDataUpdateEvent:%{asset}:%{symbol}:%{freq}
+kline.bb.thirdDataPattern=kline:pc:thirdData:%{asset}:%{symbol}:%{freq}
+kline.bb.thirdDataUpdateEventPattern=kline:pc:thirdDataUpdateEvent:%{asset}:%{symbol}:%{freq}
 
 #Exp \u5E73\u53F0\u5386\u53F2
-from_exp.bbKlineTaskPattern=from_exp:bbKlineTask:%{asset}:%{symbol}:%{freq}
-from_exp.bbKlineDataPattern=from_exp:bbKlineData:%{asset}:%{symbol}:%{freq}
-from_exp.bbKlineDataUpdateEventPattern=from_exp:bbKlineDataUpdateEvent:%{asset}:%{symbol}:%{freq}
+from_exp.bbKlineTaskPattern=from_exp:pcKlineTask:%{asset}:%{symbol}:%{freq}
+from_exp.bbKlineDataPattern=from_exp:pcKlineData:%{asset}:%{symbol}:%{freq}
+from_exp.bbKlineDataUpdateEventPattern=from_exp:pcKlineDataUpdateEvent:%{asset}:%{symbol}:%{freq}
 
 
 #\u76D1\u542C\u9700\u8981\u4FEE\u590Dkline\u7684\u4E8B\u4EF6
-bb.kline2Trade.taskEventPattern=bb:kline2Trade:%{asset}:%{symbol}:%{freq}
+bb.kline2Trade.taskEventPattern=pc:kline2Trade:%{asset}:%{symbol}:%{freq}
 
 bbkline.ongoing.redis.hostName=192.168.0.68
 bbkline.ongoing.redis.password=456
