--- a/ex-bb-kline/src/main/resources/application-pcdev.properties
+++ b/ex-bb-kline/src/main/resources/application-pcdev.properties
@@ -1,3 +1,4 @@
+app.server.port=8059
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
