--- a/ex-bb-base/src/main/resources/application.properties
+++ b/ex-bb-base/src/main/resources/application.properties
@@ -58,3 +58,19 @@ redis.poolConfig.maxWaitMillis=1000
 redis.poolConfig.testOnBorrow=true
 redis.poolConfig.testOnReturn=true
 
+
+### xxl-job admin address list, such as "http://address" or "http://address01,http://address02"
+xxl.job.admin.addresses=http://127.0.0.1:8080/xxl-job-admin
+
+### xxl-job executor address
+xxl.job.executor.appname=${spring.application.name}
+xxl.job.executor.ip=
+xxl.job.executor.port=2${app.server.port}
+
+### xxl-job, access token
+xxl.job.accessToken=
+
+### xxl-job log path
+xxl.job.executor.logpath=/data/hupa/logs/xxl-job/bb
+### xxl-job log retention days
+xxl.job.executor.logretentiondays=30
