--- a/ex-pc-base/pom.xml
+++ b/ex-pc-base/pom.xml
@@ -27,6 +27,12 @@
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 		
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+            <version>2.1.2</version>
+        </dependency>
+		
 	</dependencies>
 	
 
