--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -64,3 +64,12 @@ cron.liq.check=0/5 * * * * ?
 
 cron.liq.handle=0/5 * * * * ?
 
+### xxl-job
+xxl.job.enable=false
+xxl.job.admin.addresses=http://127.0.0.1:8780/xxl-job-admin
+xxl.job.executor.appname=${spring.application.name}
+xxl.job.executor.ip=
+xxl.job.executor.port=2${app.server.port}
+xxl.job.accessToken=
+xxl.job.executor.logpath=/data/hupa/logs/xxl-job/bb
+xxl.job.executor.logretentiondays=30
